
name:                lubeck
version:             0.1.0.0
synopsis:            Web front-end for Beautiful Destinations
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.FRP
                     , Lubeck.FRP.Events
                     , Lubeck.FRP.History
                     , Lubeck.App
                     , Lubeck.Drawing
                     , Lubeck.Util
                     , Lubeck.Forms
                     , Lubeck.Forms.Basic
                     , Lubeck.Forms.Select
                     , Lubeck.Forms.Interval
                     , Lubeck.Forms.File
                     , Lubeck.Plots.Drawing
                     , Lubeck.Plots.SimpleNormalized
                     , Lubeck.Plots.Test
                     , Lubeck.Html
                     , Lubeck.Web.History
                     , Lubeck.Web.URI
                     , BD.Api
                     , BD.Types
                     , BD.Data.Account
                     , BD.Data.AdTypes
                     , BD.Data.Ad
                     , BD.Data.AdInsight
                     , BD.Data.AdCampaign
                     , BD.Data.Image
                     , BD.Data.Count
                     , BD.Data.Interaction
                     , BD.Data.SearchPost
                     , BD.Query.PostQuery
                     , BD.Utils
                     , AdPlatform.Types
                     , AdPlatform.Pages.CreateAd
                     , AdPlatform.Pages.PostSearch
                     , AdPlatform.Pages.Login
                     , AdPlatform.Pages.User
                     , AdPlatform.Pages.Campaign
                     , AdPlatform.Pages.ImageLibrary
                     , AdPlatform.Main
                     , Components.Notifications
                     , Components.BusyIndicator
                     , Components.MainMenu
  build-depends:       base >=4.8 && <4.9
                     , virtual-dom
                     , ghcjs-ffiqq == 0.1.0.0
                     , ghcjs-base ==0.2.0.0
                     , stm
                     , contravariant
                     , vector
                     , profunctors
                     , text
                     , mtl
                     , transformers
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , semigroups
                     , data-interval
                     , vector-space
                     , vector-space-points
                     , colour
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel

  hs-source-dirs:      src
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -fno-warn-typed-holes

executable bd-example-app
  main-is:             src/Example.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , colour
                     , vector-space
                     , time
                     , lens
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-static-page
  main-is:             src/ExampleStatic.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-widget-composition
  main-is:             src/ExampleWidgetComposition.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-dynamic-page
  main-is:             src/ExampleDynamic.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-api-req
  main-is:             src/ExampleApiReq.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-history
  main-is:             example/History.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots
  main-is:             src/ExamplePlots.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , time
                     , vector-space
                     , vector-space-points
                     , colour
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-interactions
  main-is:             src/Interactions.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
                     , ghcjs-ffiqq == 0.1.0.0
                     , stm
                     --, contravariant
                     , text
                     , mtl
                     , time
                     , containers
                     , lens
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring

  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable bd-adplatform
  main-is:             src/AdPlatform.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
                     , ghcjs-ffiqq == 0.1.0.0
                     , stm
                     --, contravariant
                     , text
                     , mtl
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel

  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable bd-index
  main-is:             src/Index.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010
