
name:                lubeck
version:             0.1.0.0
synopsis:            Web front-end for Beautiful Destinations
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.FRP
                     , Lubeck.FRP.Events
                     , Lubeck.FRP.History
                     , Lubeck.App
                     , Lubeck.Drawing
                     , Lubeck.Util
                     , Lubeck.Forms
                     , Lubeck.Forms.Basic
                     , Lubeck.Forms.Button
                     , Lubeck.Forms.Select
                     , Lubeck.Forms.Interval
                     , Lubeck.Forms.File
                     , Lubeck.DV.Drawing
                     , Lubeck.DV.SimpleNormalized
                    --  , Lubeck.DV.Test
                     , Lubeck.Html
                     , Lubeck.Web.History
                     , Lubeck.Web.URI
                     , BD.Api
                     , BD.Types
                     , BD.Data.Account
                     , BD.Data.AdTypes
                     , BD.Data.Ad
                     , BD.Data.AdInsight
                     , BD.Data.AdCampaign
                     , BD.Data.Image
                     , BD.Data.Count
                     , BD.Data.Interaction
                     , BD.Data.SearchPost
                     , BD.Query.PostQuery
                     , BD.Utils
                     , AdPlatform.Types
                     , AdPlatform.Pages.CreateAd
                     , AdPlatform.Pages.PostSearch
                     , AdPlatform.Pages.Login
                     , AdPlatform.Pages.User
                     , AdPlatform.Pages.Campaign
                     , AdPlatform.Pages.ImageLibrary
                     , AdPlatform.Main
                     , Components.Notifications
                     , Components.BusyIndicator
                     , Components.MainMenu
                     , Components.Map
  build-depends:       base >=4.8 && <4.9
                     , virtual-dom
                     , ghcjs-ffiqq == 0.1.0.0
                     , ghcjs-base ==0.2.0.0
                     , stm
                     , contravariant
                     , vector
                     , profunctors
                     , text
                     , mtl
                     , transformers
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , semigroups
                     , data-interval
                     , linear
                     , vector-space
                     , vector-space-points
                     , colour
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -fno-warn-typed-holes

executable bd-example-app
  main-is:             examples/Reactive.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , colour
                    --  , vector-space
                     , linear
                     , time
                     , lens
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-static-page
  main-is:             examples/Static.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-widget-composition
  main-is:             examples/WidgetComposition.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-dynamic-page
  main-is:             examples/Dynamic.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-api-req
  main-is:             examples/ApiReq.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-history
  main-is:             examples/History.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots
  main-is:             examples/DV1.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                    --  , vector-space
                    --  , vector-space-points
                     , colour
                     , random
                     , lens
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-plots2
  main-is:             examples/DV2.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                    --  , vector-space
                    --  , vector-space-points
                     , colour
                     , random
                     , lens
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-example-plots3
  main-is:             examples/DV3.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                    --  , vector-space
                    --  , vector-space-points
                     , colour
                     , random
                     , lens
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-interactions
  main-is:             src/Interactions.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
                     , ghcjs-ffiqq == 0.1.0.0
                     , stm
                     --, contravariant
                     , text
                     , mtl
                     , time
                     , containers
                     , lens
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , ListZipper
  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable bd-adplatform
  main-is:             src/AdPlatform.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
                     , ghcjs-ffiqq == 0.1.0.0
                     , stm
                     --, contravariant
                     , text
                     , mtl
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel

  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable bd-label-refiner
  main-is:             src/LabelRefiner.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , colour
                     , vector-space
                     , time
                     , lens
                     , aeson
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010

executable bd-index
  main-is:             src/Index.hs
  build-depends:       base >=4.8 && <4.9
                     , lubeck
                     , virtual-dom
                     , ghcjs-base ==0.2.0.0
  default-language:    Haskell2010
