
name:                lubeck
version:             0.1.0.0
synopsis:            Web front-end for Beautiful Destinations
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.FRP
                     , Lubeck.FRP.Events
                     , Lubeck.FRP.History
                     , Lubeck.Str
                     , Lubeck.Drawing
                     , Lubeck.DV
                     , Lubeck.DV.New
                     , Lubeck.DV.Drawing
                     , Lubeck.DV.SimpleNormalized
                     , Lubeck.DV.Styling

                     , Lubeck.App
                     , Lubeck.Util
                     , Lubeck.Forms
                     , Lubeck.Forms.Basic
                     , Lubeck.Forms.Button
                     , Lubeck.Forms.Select
                     , Lubeck.Forms.Interval
                     , Lubeck.Forms.File
                     , Lubeck.Html
                     , Lubeck.Web.History
                     , Lubeck.Web.URI
                     , BD.Api
                     , BD.Types
                     , BD.Data.Account
                     , BD.Data.Group
                     , BD.Data.Auth
                     , BD.Data.AdTypes
                     , BD.Data.Ad
                     , BD.Data.AdInsight
                     , BD.Data.AdCampaign
                     , BD.Data.Image
                     , BD.Data.ImageLR
                     , BD.Data.ImageLabel
                     , BD.Data.SessionLR
                     , BD.Data.Count
                     , BD.Data.Interaction
                     , BD.Data.SearchPost
                     , BD.Query.PostQuery
                     , BD.Utils
                     , BDPlatform.Types
                     , BDPlatform.Pages.CreateAd
                     , BDPlatform.Pages.Login
                     , BDPlatform.Pages.Campaign
                     , BDPlatform.Pages.Search.Index
                     , BDPlatform.Pages.Search.Instagram
                     , BDPlatform.Pages.Search.Upload
                     , BDPlatform.Pages.Accounts.Index
                     , BDPlatform.Pages.Accounts.Search
                     , BDPlatform.Pages.Accounts.Manage
                     , BDPlatform.Pages.Accounts.Common
                     , BDPlatform.Pages.Accounts.Types
                     , BDPlatform.Pages.Manage.Index
                     , BDPlatform.Pages.Manage.ImageLibrary
                     , BDPlatform.Pages.CurrentUser.Index
                     , BDPlatform.Pages.CurrentUser.User
                     , BDPlatform.Pages.Results.Index
                     , BDPlatform.Pages.Results.Interactions
                     , BDPlatform.HTMLCombinators
                     , BDPlatform.Validators
                     , BDPlatform.Main
                     , Components.Notifications
                     , Components.BusyIndicator
                     , Components.MainMenu
                     , Components.Map
                     , Components.Grid
                     , Components.Layout
                     , Components.ConfirmDialog
  build-depends:       base
                     , base-prelude
                     , virtual-dom
                     , ghcjs-ffiqq
                     , ghcjs-base
                     , stm
                     , contravariant
                     , vector
                     , profunctors
                     , text
                     , mtl
                     , transformers
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , semigroups
                     , data-interval
                     , linear
                     , vector-space
                     , colour
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel
                     , random
                     , ListZipper
                     , split
                     , either
                     , boxes
                     , network-uri
                     , uuid
  hs-source-dirs:      src, lubeck-core/src, lubeck-frp/src, lubeck-drawing/src, lubeck-dv/src
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -fno-warn-typed-holes

executable bd-example-app
  main-is:             examples/Reactive.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , colour
                     , linear
                     , time
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-static-page
  main-is:             examples/Static.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-dynamic-page
  main-is:             examples/Dynamic.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-api-req
  main-is:             examples/ApiReq.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-history
  main-is:             examples/History.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots
  main-is:             examples/DV1.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots2
  main-is:             examples/DV2.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots3
  main-is:             examples/DV3.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots4
  main-is:             examples/DV4.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots5
  main-is:             examples/DV5.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-example-plots6
  main-is:             examples/DV6.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , time
                     , linear
                     , colour
                     , random
                     , lens
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-bdplatform
  main-is:             src/BDPlatform.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
                     , ghcjs-ffiqq
                     , stm
                     , text
                     , mtl
                     , time
                     , containers
                     , unordered-containers
                     , lens
                     , xml
                     , neat-interpolation
                     , data-default
                     , containers
                     , aeson
                     , bytestring
                     , monad-parallel
                     , ListZipper
                     , either
                     , network-uri
  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable bd-label-refiner
  main-is:             src/LabelRefiner.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , colour
                     , vector-space
                     , time
                     , lens
                     , aeson
                     , text
                     , containers
                     , uuid
                     , ghcjs-base
  default-language:    Haskell2010

executable bd-index
  main-is:             src/Index.hs
  build-depends:       base
                     , lubeck
                     , virtual-dom
                     , ghcjs-base
  default-language:    Haskell2010
