
name:                lubeck-hooks
version:             0.1.0.0
synopsis:            Listen to Github hooks
license:             AllRightsReserved
license-file:        ../LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

executable lubeck-hooks
  main-is:             Main.hs
  build-depends:       base           >=4.8 && <4.9
                     , scotty
                     , mtl
                     , transformers
                     , containers
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
