
name:                lubeck-core
version:             0.1.0.0
synopsis:            Lubeck core libraries
license:             MIT
license-file:        LICENSE
author:              Hans Höglund
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.Str
  build-depends:       base, split
  if impl(ghcjs)
    build-depends:     ghcjs-base
  hs-source-dirs:      src
  default-language:    Haskell2010
