
name:                lubeck-drawing
version:             0.1.0.0
synopsis:            Functional 2D graphics based on SVG
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  js-sources:          jsbits/fast-renderer.out.js
  exposed-modules:     Lubeck.Drawing
                     , Lubeck.Drawing.Types
                     , Lubeck.Drawing.Style
                     , Lubeck.Drawing.Text
                     , Lubeck.Drawing.Transformation
                     , Lubeck.Drawing.Handlers
                     , Lubeck.Drawing.Internal.MMap
                     , Lubeck.Drawing.Internal.Backend.SVG
                     , Lubeck.Drawing.Internal.Backend.FastRenderer

  build-depends:       base
                     , base-prelude
                     , lens
                     , lubeck-core
                     , text
                     , mtl
                     , transformers
                     , contravariant
                     , containers
                     , unordered-containers
                     , semigroups
                     , linear
                     , colour
                     , xml
                     , split
                     , neat-interpolation
  if impl(ghcjs)
    build-depends:
                       virtual-dom
                     , ghcjs-base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes

executable lubeck-drawing-bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                    --  , lens
                     , linear
                     , colour
                     , lubeck-core
                     , lubeck-drawing
                     , MonadRandom
  if impl(ghcjs)
    build-depends:     ghcjs-base
                    --  , lubeck-web
                     , virtual-dom
                     , benchmark
  default-language:    Haskell2010

executable lubeck-drawing-test
  js-sources:          jsbits/fast-renderer.out.js
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                    --  , lens
                     , linear
                     , colour
                     , mtl
                     , contravariant
                     , transformers
                     , MonadRandom
                     , lubeck-core
                     , lubeck-drawing
                     , MonadRandom
  if impl(ghcjs)
    build-depends:     ghcjs-base
                    --  , lubeck-web
                     , virtual-dom
                     , benchmark
  default-language:    Haskell2010

executable lubeck-drawing-growth-graph
  js-sources:          jsbits/fast-renderer.out.js
  hs-source-dirs:      test
  main-is:             GrowthGraph.hs
  ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                    --  , lens
                     , linear
                     , colour
                     , mtl
                     , contravariant
                     , transformers
                     , MonadRandom
                     , lubeck-core
                     , lubeck-drawing
                     , MonadRandom
  if impl(ghcjs)
    build-depends:     ghcjs-base
                    --  , lubeck-web
                     , virtual-dom
                     , benchmark
  default-language:    Haskell2010
