
name:                lubeck-dv
version:             0.1.0.0
synopsis:            Data visualization based on lubeck-drawing
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.DV
                     , Lubeck.DV.New
                     , Lubeck.DV.Drawing
                     , Lubeck.DV.SimpleNormalized
                     , Lubeck.DV.Styling
                     , Lubeck.DV.ColorPalette
                     , Lubeck.DV.LineStyles
  other-modules:       Lubeck.DV.Internal.Normalized
                     , Lubeck.DV.Internal.Table
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , neat-interpolation
                     , boxes
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-typed-holes
