
name:                lubeck-dv
version:             0.1.0.0
synopsis:            Data visualization based on lubeck-drawing
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.DV
                     , Lubeck.DV.New
                     , Lubeck.DV.SimpleNormalized
                     , Lubeck.DV.Styling
                     , Lubeck.DV.ColorPalette
                     , Lubeck.DV.LineStyles
                     , Lubeck.DV.Internal.Normalized
                     , Lubeck.DV.Internal.Table
                     , Lubeck.DV.Internal.Render
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , lubeck-frp
                     , neat-interpolation
                     , boxes
                     , temporary
                     , directory
                     , generic-deriving
                     -- TODO test suite only (@stack repl@ confuses these)
                     , process
                     , temporary
                     , directory
                     , bytestring
                     , cryptohash
                     , aeson
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- ghc-options:         -fno-warn-typed-holes


test-suite lubeck-dv-test-main
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , neat-interpolation
                     , boxes
                     , directory
                     , temporary
                     , lubeck-dv

                     , process
                     , temporary
                     , directory
                     , bytestring
                     , cryptohash
                     , aeson
                     , filepath
                     , text

test-suite lubeck-dv-test-table
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Table.hs
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , neat-interpolation
                     , boxes
                     , directory
                     , temporary
                     , lubeck-dv
                     , QuickCheck
